cilium/cilium-network-policies.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: harbor-database-restrict
  namespace: harbor
spec:
  endpointSelector:
    matchLabels:
      app: harbor
      component: database
  ingress:
    - fromEndpoints:
        - matchLabels: {app: harbor, component: core}
        - matchLabels: {app: harbor, component: jobservice}
        - matchLabels: {app: harbor, component: registry}
      toPorts:
        - ports: [{port: "5432", protocol: TCP}]
